# Rooaa

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  ROOAA Notebook.ipynb  ROOAA Notebook_F.ipynb  ROOAA_Notebook_F.ipynb  dev-requirements.in  dev-requirements.txt  docker-compose.yml  download_weights.sh  install.sh  manage.py  model.ipynb  pyproject.toml  requirements.in  requirements.txt  run.bat
MLService/: dense_service.py  settings.py  yolo_service.py
MLService/helpers/: dense_model.py  yolo_model.py
rooaa/: __init__.py  celery.py  extensions.py  settings.py
rooaa/api/: camera.py  capture.py  predict.py  tasks.py  upload.py
rooaa/ml-model/darknet-master/: Makefile
rooaa/notebooks/: MODELv0.1.ipynb
rooaa/static/css/: camera.css
rooaa/static/js/: app.js
rooaa/templates/: camera.html
rooaa/utils/: debug.py  dense.py  filtration.py  image.py  layers.py  yolo.py
