[tool.poetry]
name = "Rooaa"
version = "0.1.0"
description = ""
authors = [
    "abdelrahman <abdelrahmankandil@hotmail.com>",
    "rami <ramishenouda@outlook.com>",
    "khaled <mohammad.khaled.moslemany@gmail.com"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-cors = "^3.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pep8 = "^1.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
